--- a/mail/mail/templates/mail/inbox.html
+++ b/mail/mail/templates/mail/inbox.html
@@ -31,9 +31,7 @@
         </form>
     </div>
     <div id="in-email-view">
-        <div id="inbox-email"></div>
-        <div id="sent-email"></div>
-        <div id="archive-email"></div>
+        <!-- each email is wrapped by a div with id -->
     </div>
     
 {% endblock %}
