--- a/mail/mail/templates/mail/inbox.html
+++ b/mail/mail/templates/mail/inbox.html
@@ -26,6 +26,7 @@
             <div class="form-group">
                 <input class="form-control" id="compose-subject" placeholder="Subject">
             </div>
+            <!-- <p class="pre-filled-body">Only displayed when Reply email</p> -->
             <textarea class="form-control" id="compose-body" placeholder="Body"></textarea>
             <input type="submit" class="btn btn-primary"/>
         </form>
