--- a/mail/mail/static/mail/styles.css
+++ b/mail/mail/static/mail/styles.css
@@ -1,3 +1,18 @@
 textarea {
     min-height: 400px;
 }
+
+.emails-grid {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    padding: 5px;
+}
+
+/* does not work??? */
+.emails-grid:hover {
+    background-color: blue;
+}
+
+.gridItem-timestamp {
+    text-align: right;
+}
