--- a/mail/mail/templates/mail/inbox.html
+++ b/mail/mail/templates/mail/inbox.html
@@ -4,11 +4,11 @@
 {% block body %}
     <header class="nav-grid">
         <div class="nav-div1">
-            <button class="btn btn-sm btn-outline-primary" id="inbox"><b>Inbox</b></button>
-            <button class="btn btn-sm btn-outline-primary" id="compose"><b>Compose</b></button>
-            <button class="btn btn-sm btn-outline-primary" id="sent"><b>Sent</b></button>
-            <button class="btn btn-sm btn-outline-primary" id="archived"><b>Archived</b></button>
-            <a class="btn btn-sm btn-outline-primary" href="{% url 'logout' %}"><b>Log Out</b></a>    
+            <button class="btn btn-sm btn-outline-primary" id="inbox">Inbox</button>
+            <button class="btn btn-sm btn-outline-primary" id="compose">Compose</button>
+            <button class="btn btn-sm btn-outline-primary" id="sent">Sent</button>
+            <button class="btn btn-sm btn-outline-primary" id="archived">Archived</button>
+            <a class="btn btn-sm btn-outline-primary" href="{% url 'logout' %}">Log Out</a>    
         </div>
         <h2 class="nav-div2">{{ request.user.email }}</h2>  
     </header>
